--- a/website/versioned_docs/version-2.4.0/best-practice/testing/README.mdx
+++ b/website/versioned_docs/version-2.4.0/best-practice/testing/README.mdx
@@ -89,8 +89,15 @@ asyncio_default_fixture_loop_scope = "session"
 ```python title=tests/conftest.py
 import pytest
 import nonebot
+from pytest_asyncio import is_async_test
 # 导入适配器
 from nonebot.adapters.console import Adapter as ConsoleAdapter
+
+def pytest_collection_modifyitems(items: list[pytest.Item]):
+    pytest_asyncio_tests = (item for item in items if is_async_test(item))
+    session_scope_marker = pytest.mark.asyncio(loop_scope="session")
+    for async_test in pytest_asyncio_tests:
+        async_test.add_marker(session_scope_marker, append=False)
 
 @pytest.fixture(scope="session", autouse=True)
 async def after_nonebot_init(after_nonebot_init: None):
