--- a/website/docs/best-practice/deployment.mdx
+++ b/website/docs/best-practice/deployment.mdx
@@ -219,6 +219,7 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=sha
+            type=raw,value=latest
 
       - name: Build and Publish
         uses: docker/build-push-action@v4
